@@ -34,6 +34,7 @@ Cacti CHANGELOG
 -feature#4907: Add lmSensors to the Net-SNMP Device Template
 -feature#4943: Add ability to periodically check RRDfiles for errors in batch
 -feature#4948: When using proxies to load balance Cacti, if the proxy cookie times out, Cacti should properly redirect
+-feature#4955: Provide Common Sense Memory Tuning based upon MySQL Tuner Recommendations
 
 1.2.22
 -security#4834: When creating new graphs, cross site injection is possible
